--- a/nginx/conf.d/laravel_10.conf
+++ b/nginx/conf.d/laravel_10.conf
@@ -1,3 +1,6 @@
+fastcgi_cache_path /etc/nginx/cache levels=1:2 keys_zone=MYAPP:100m inactive=60m;
+fastcgi_cache_key "$scheme$request_method$host$request_uri";
+
 server {
          listen       80;
          server_name  laravel.localhost;
@@ -18,6 +21,8 @@ server {
             fastcgi_pass laravel_10:9000;
             fastcgi_index index.php;
             include fastcgi.conf;
+			fastcgi_cache MYAPP;
+
          }
 
        # handle .php
