--- a/docker/nginx/conf.d/app.conf
+++ b/docker/nginx/conf.d/app.conf
@@ -1,32 +1,46 @@
 fastcgi_cache_path /etc/nginx/cache levels=1:2 keys_zone=MYAPP:100m inactive=60m;
 fastcgi_cache_key "$scheme$request_method$host$request_uri";
 
+ server {
+	listen 80;
+	server_name public.localhost;
+ 	root /var/www/api/public/;
+
+   	# location / {
+	# 	proxy_pass http://react-app:5173;
+	# 	proxy_set_header Host $host;
+	# 	proxy_set_header X-Real-IP $remote_addr;
+	# }
+   
+}
+
+
 server {
-         listen       80;
-         server_name  laravel.localhost;
-         root         /var/www/public/;
+		listen       80;
+		server_name  api.localhost;
+		root         /var/www/api/public/;
 
-         index index.html index.htm index.php;
+		index index.html index.htm index.php;
 
-         error_log /var/log/nginx/test.localhost.error.log;
-         access_log /var/log/nginx/test.localhost.access.log;
+		add_header X-Frame-Options "SAMEORIGIN";
+		add_header X-XSS-Protection "1; mode=block";
+		add_header X-Content-Type-Options "nosniff";
 
+		location / {
+			try_files $uri $uri/ /index.php$is_args$args;
+			}
 
-         location / {
-            try_files $uri $uri/ /index.php$is_args$args;
-         }
-
-         location ~ \.php$ {
-            fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_pass laravel_10:9000;
-            fastcgi_index index.php;
-            include fastcgi.conf;
+		location ~ \.php$ {
+			fastcgi_split_path_info ^(.+\.php)(/.+)$;
+			fastcgi_pass api:9000;
+			fastcgi_index index.php;
+			include fastcgi.conf;
 			fastcgi_cache MYAPP;
 
-         }
+			}
 
-       # handle .php
-        location ~ \.php$ {
+		# handle .php
+		location ~ \.php$ {
 
 			# 404
 			try_files                     $fastcgi_script_name =404;
@@ -66,8 +80,11 @@ server {
 			# PHP only, required if PHP was built with --enable-force-cgi-redirect
 			fastcgi_param  REDIRECT_STATUS 200;
 			
-    }
+	}
 
 
 
 }
+
+
+
