--- a/docker/nginx/conf.d/app.conf
+++ b/docker/nginx/conf.d/app.conf
@@ -1,23 +1,27 @@
-fastcgi_cache_path /etc/nginx/cache levels=1:2 keys_zone=MYAPP:100m inactive=60m;
-fastcgi_cache_key "$scheme$request_method$host$request_uri";
+ fastcgi_cache_path /etc/nginx/cache levels=1:2 keys_zone=MYAPP:100m inactive=60m;
+ fastcgi_cache_key "$scheme$request_method$host$request_uri";
+
+
 
  server {
-	listen 80;
-	server_name public.localhost;
- 	root /var/www/api/public/;
 
-   	# location / {
-	# 	proxy_pass http://react-app:5173;
-	# 	proxy_set_header Host $host;
-	# 	proxy_set_header X-Real-IP $remote_addr;
-	# }
-   
+	listen 80;
+	server_name panel.localhost;
+ 	root /var/www/panel/;
+    index index.html;
+
+    location / {
+     	proxy_pass http://react_app:5173;
+     	proxy_set_header Host $host;
+     	proxy_set_header X-Real-IP $remote_addr;
+     }
+
 }
 
 
 server {
 		listen       80;
-		server_name  api.localhost;
+		server_name  backend.localhost;
 		root         /var/www/api/public/;
 
 		index index.html index.htm index.php;
@@ -28,7 +32,7 @@ server {
 
 		location / {
 			try_files $uri $uri/ /index.php$is_args$args;
-			}
+        }
 
 		location ~ \.php$ {
 			fastcgi_split_path_info ^(.+\.php)(/.+)$;
@@ -79,12 +83,11 @@ server {
 
 			# PHP only, required if PHP was built with --enable-force-cgi-redirect
 			fastcgi_param  REDIRECT_STATUS 200;
-			
+
 	}
 
 
 
 }
-
 
 
